--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,14 @@
     object-fit: cover;
     border-radius: 50%;
 }
+
+.table-total {
+    font-weight: 500;
+    text-align: right;
+    font-size: 1.25rem;
+}
+
+.user-form {
+    max-width: 400px;
+    margin: 0 auto;
+}
