Editar usuario finalizado

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,11 @@
     font-size: 1.25rem;
 }
 
-.user-form {
+.user-form-container {
     max-width: 400px;
     margin: 0 auto;
+}
+
+.user-form-container.form-edit {
+    background-color: #ecfbdc !important;
 }
