--- a/css/styles.css
+++ b/css/styles.css
@@ -34,3 +34,22 @@
 .user-form-container.form-edit {
     background-color: #ecfbdc !important;
 }
+
+.form-container {
+    width: 100%;
+    height: 100dvh;
+    background-color: #1c1c1c;
+    display: grid;
+    place-items: center;
+    /* metodo flex 
+    display: flex;
+    align-items: center;
+    justify-content: center;*/
+}
+
+.form-login {
+    padding: 1.5rem;
+    background-color: rgb(5, 86, 168);
+    border-radius: 10px;
+    color: white;
+}
