--- a/css/styles.css
+++ b/css/styles.css
@@ -52,4 +52,6 @@
     background-color: rgb(5, 86, 168);
     border-radius: 10px;
     color: white;
+    width: min(100%, 350px);
+    margin: .5rem;
 }
